--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ env:
   matrix
     - OS_TYPE=centos OS_VERSION=7
 
-before_install:
-- if [ -z "$TRAVIS_TAG" ]; then exit 0; fi
+#before_install:
+#- if [ -z "$TRAVIS_TAG" ]; then exit 0; fi
 
 after_success:
 - test -n "$TRAVIS_TAG"
