--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,6 +11,11 @@ jobs:
       with:
         go-version: 1.13
       id: go
+      
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1
+      with:
+        path: go/src/github.com/docker/docker
 
     - name: Performing Test
       run: |
