--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,38 +16,16 @@ jobs:
       uses: actions/checkout@v1
       with:
         path: go/src/github.com/docker/docker
-
-#    - name: Performing Test
-#      run: |
-#        make test
-
+        
+    - name: Performing Test
+      run: |
+        make test
+        
     - name: Building RPMs
+      if: startsWith(github.ref, 'refs/tags/')
       run: |
         make rpm
         ls -sl
-       
-#    - name: Upload to release
-#      uses: meeDamian/github-release@1.0
-#      with:
-#        token: ${{ secrets.TOKEN }}
-#        tag: v1.12.7
-#        name: New Release
-#        body: >
-#          This release actually changes the fabric of the reality, so be careful 
-#          while applying, as error in database migration, can irrecoverably wipe 
-#          some laws of physics.  
-#        gzip: folders
-#        files: >
-#          bundles/1.12.7/build-rpm/centos-7/RPMS/x86_64/docker-engine-1.12.7-1.el7.x86_64.rpm
-   
-#    - name: Upload to release
-#      uses: svenstaro/upload-release-action@v1-release
-#      with:
-#        repo_token: ${{ secrets.TOKEN }}
-#        file: bundles/1.12.7/build-rpm/centos-7/RPMS/x86_64/docker-engine-1.12.7-1.el7.x86_64.rpm
-#        asset_name: docker-engine
-#        tag: ${{ github.ref }}
-#        overwrite: true
   
     - name: Upload to release
       uses: softprops/action-gh-release@v1
